--- a/data.yml
+++ b/data.yml
@@ -1,5 +1,11 @@
 --- 
 - !ruby/object:Itsumade::Store 
-  hours: []
-
+  hours: 
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-06 23:00:00 Z
+    start: 1970-01-06 22:00:00 Z
+    text: "Tue: 10:00 PM - 11:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-07 15:00:00 Z
+    start: 1970-01-07 07:00:00 Z
   name: Tokyo Metro
