--- a/data.yml
+++ b/data.yml
@@ -1,11 +1,64 @@
---- 
+--- &id002 
 - !ruby/object:Itsumade::Store 
   hours: 
   - !ruby/object:Itsumade::OpeningHours 
-    end: 1970-01-06 23:00:00 Z
-    start: 1970-01-06 22:00:00 Z
-    text: "Tue: 10:00 PM - 11:00 PM"
+    end: 1970-01-04 19:00:00 Z
+    start: 1970-01-04 09:00:00 Z
+    text: "Sun:  9:00 AM -  7:00 PM"
   - !ruby/object:Itsumade::OpeningHours 
-    end: 1970-01-07 15:00:00 Z
-    start: 1970-01-07 07:00:00 Z
-  name: Tokyo Metro
+    end: 1970-01-05 22:30:00 Z
+    start: 1970-01-05 08:30:00 Z
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-06 22:30:00 Z
+    start: 1970-01-06 08:30:00 Z
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-07 22:30:00 Z
+    start: 1970-01-07 08:30:00 Z
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-08 22:30:00 Z
+    start: 1970-01-08 08:30:00 Z
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-09 22:30:00 Z
+    start: 1970-01-09 08:30:00 Z
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-10 19:00:00 Z
+    start: 1970-01-10 09:00:00 Z
+    text: "Sat:  9:00 AM -  7:00 PM"
+  name: General Library
+  observer_state: true
+  observers: 
+  - &id001 !ruby/object:Itsumade::Manager 
+    stores: *id002
+- !ruby/object:Itsumade::Store 
+  hours: 
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-04 20:00:00 Z
+    start: 1970-01-04 08:00:00 Z
+    text: "Sun:  8:00 AM -  8:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-05 21:00:00 Z
+    start: 1970-01-05 08:00:00 Z
+    text: "Mon:  8:00 AM -  9:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-06 21:00:00 Z
+    start: 1970-01-06 08:00:00 Z
+    text: "Tue:  8:00 AM -  9:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-07 21:00:00 Z
+    start: 1970-01-07 08:00:00 Z
+    text: "Wed:  8:00 AM -  9:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-08 21:00:00 Z
+    start: 1970-01-08 08:00:00 Z
+    text: "Thu:  8:00 AM -  9:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-09 21:00:00 Z
+    start: 1970-01-09 08:00:00 Z
+    text: "Fri:  8:00 AM -  9:00 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-10 21:00:00 Z
+    start: 1970-01-10 08:00:00 Z
+  name: Tokyo Metro M
+  observer_state: true
+  observers: 
+  - *id001
