--- a/data.yml
+++ b/data.yml
@@ -32,6 +32,70 @@
 - !ruby/object:Itsumade::Store 
   hours: 
   - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-05 17:30:00 Z
+    start: 1970-01-05 09:00:00 Z
+    text: "Mon:  9:00 AM -  5:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-06 17:30:00 Z
+    start: 1970-01-06 09:00:00 Z
+    text: "Tue:  9:00 AM -  5:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-07 17:30:00 Z
+    start: 1970-01-07 09:00:00 Z
+    text: "Wed:  9:00 AM -  5:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-08 17:30:00 Z
+    start: 1970-01-08 09:00:00 Z
+    text: "Thu:  9:00 AM -  5:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-09 17:30:00 Z
+    start: 1970-01-09 09:00:00 Z
+    text: "Fri:  9:00 AM -  5:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-10 12:30:00 Z
+    start: 1970-01-10 09:00:00 Z
+    text: "Sat:  9:00 AM - 12:30 PM"
+  name: Hongo 1 ATM
+  observer_state: true
+  observers: 
+  - *id001
+- !ruby/object:Itsumade::Store 
+  hours: 
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-04 22:30:00 Z
+    start: 1970-01-04 07:30:00 Z
+    text: "Sun:  7:30 AM - 10:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-05 22:30:00 Z
+    start: 1970-01-05 07:00:00 Z
+    text: "Mon:  7:00 AM - 10:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-06 22:30:00 Z
+    start: 1970-01-06 07:00:00 Z
+    text: "Tue:  7:00 AM - 10:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-07 22:30:00 Z
+    start: 1970-01-07 07:00:00 Z
+    text: "Wed:  7:00 AM - 10:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-08 22:30:00 Z
+    start: 1970-01-08 07:00:00 Z
+    text: "Thu:  7:00 AM - 10:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-09 22:30:00 Z
+    start: 1970-01-09 07:00:00 Z
+    text: "Fri:  7:00 AM - 10:30 PM"
+  - !ruby/object:Itsumade::OpeningHours 
+    end: 1970-01-10 22:30:00 Z
+    start: 1970-01-10 07:00:00 Z
+    text: "Sat:  7:00 AM - 10:30 PM"
+  name: New Yorkers
+  observer_state: true
+  observers: 
+  - *id001
+- !ruby/object:Itsumade::Store 
+  hours: 
+  - !ruby/object:Itsumade::OpeningHours 
     end: 1970-01-04 20:00:00 Z
     start: 1970-01-04 08:00:00 Z
     text: "Sun:  8:00 AM -  8:00 PM"
@@ -58,7 +122,8 @@
   - !ruby/object:Itsumade::OpeningHours 
     end: 1970-01-10 21:00:00 Z
     start: 1970-01-10 08:00:00 Z
-  name: Tokyo Metro M
+    text: "Sat:  8:00 AM -  9:00 PM"
+  name: Tokyo Metro M ATM
   observer_state: true
   observers: 
   - *id001
